--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,38 @@
+body {
+    margin-top: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-image: url("https://i.redd.it/kulgvmtx1nk61.jpg");
+    background-size: cover;
+    font-size: 40px;
+  }
+  
+  ul {
+    padding: 0;
+  }
+  
+  input {
+    border: none;
+    width: 100%;
+  }
 
-/* 
+  ul li {
+    background-color: white;
+    border: 2px solid black;
+    padding: 10px;
+    list-style: none;
+  }
+  
+  h1 {
+    font-size: 100px;
+  }
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+  .eliminar-todo{
+    border-radius: 40px;
+    color: white;
+    background-color: red;
+    font-size: 20px;
+    padding: 10px;
+    border: none;
+    size: 200px;
+  }
